--- a/task/style.css
+++ b/task/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0%;
     padding: 0%;
-    font-family: "Redressed", cursive;
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 
 }
